# kafkaesk

./: .bandit  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  pyproject.toml  run.py  testmodule.py
.github/workflows/: ci.yml  upload-pypi.yml
examples/: logger.py  parallel.py  simple.py
kafkaesk/: __init__.py  app.py  consumer.py  exceptions.py  kafka.py  metrics.py  middleware.py  prometheus.py  retry.py  scheduler.py  schema.py  subscription.py  utils.py
kafkaesk/ext/logging/: __init__.py  formatter.py  handler.py  record.py
kafkaesk/metrics/: __init__.py  dummy.py  factories.py
stubs/aiokafka/: __init__.py  errors.py  structs.py
stubs/kafka/: __init__.py  errors.py  structs.py
stubs/kafka/admin/: __init__.py  client.py
tests/: conftest.py  fixtures.py  test_app.py  test_kafka.py  test_metrics.py  test_pubsub.py  test_retry.py  test_schema.py  test_subscription.py  utils.py
tests/acceptance/: produce.py  test_healthcheck.py  test_pubsub.py  test_rebalance.py  test_run.py
tests/acceptance/ext/logging/: test_handler.py  test_record.py
tests/ext/logging/: test_formatter.py  test_handler.py  test_record.py
tests/unit/: test_app.py  test_consumer.py  test_exceptions.py  test_kafka.py  test_metrics.py  test_retry.py  test_schema.py  test_subscription.py
tests/unit/ext/logging/: test_handler.py
