[tool.poetry]
name = "kafkaesk"
version = "0.4.1"
description = "Easy publish and subscribe to events with python and Kafka."
authors = ["vangheem <vangheem@gmail.com>", "pfreixes <pfreixes@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: BSD License",
    "Topic :: System :: Distributed Computing"
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
aiokafka = "^0.6.0"
kafka-python = "^2.0.1"
pydantic = "^1.5.1"
orjson = "3.3.1"
jsonschema = "^3.2.0"
prometheus_client = "^0.8.0"
opentracing = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-docker-fixtures = "^1.3.7"
pytest-asyncio = "^0.12.0"
mypy = "0.770"
flake8 = "^3.8.1"
isort = "^4.3.21"
black = "^19.10b0"
pytest-rerunfailures = "^9.0"
pytest-cov = "^2.8.1"
pdbpp = "^0.10.2"
python-language-server = "^0.35.1"
asyncmock = "^0.4.2"

[tool.poetry.scripts]
kafkaesk = 'kafkaesk.app:run'


[tool.poetry.urls]
"GitHub" = "https://github.com/onna/kafkaesk"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


