[tool.poetry]
name = "kafkaesk"
version = "0.8.5"
description = "Easy publish and subscribe to events with python and Kafka."
authors = ["vangheem <vangheem@gmail.com>", "pfreixes <pfreixes@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: BSD License",
    "Topic :: System :: Distributed Computing"
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8.1"
aiokafka = ">=0.7.1"
kafka-python = "^2.0.2"
pydantic = ">=1.5.1"
orjson = ">=3.3.1"
jsonschema = ">=3.2.0"
prometheus_client = ">=0.8.0"
opentracing = ">=2.3.0"
async-timeout = ">=3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-docker-fixtures = "^1.3.17"
pytest-asyncio = "^0.21.0"
mypy = "1.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

black = "^23.3.0"
pytest-rerunfailures = "^11.1.2"
pytest-cov = "^4.1.0"
pdbpp = "^0.10.3"
python-language-server = "^0.36.2"
jaeger-client = "4.7.0"

[tool.poetry.scripts]
kafkaesk = 'kafkaesk.app:run'


[tool.poetry.urls]
"GitHub" = "https://github.com/onna/kafkaesk"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
